[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PySeismoSoil"
version = "0.6.3"
description = "A Python library for performing 1D seismic site response analysis"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "PySeismoSoil Contributors"}
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=2.0.0",
    "numba>=0.38.0",
    "numpy>=1.11.0",
    "scipy>=1.1.0",
    "PyWavelets>=1.3.0",
]

[project.urls]
Homepage = "https://caltech-geoquake.github.io/PySeismoSoil/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["PySeismoSoil*"]
exclude = ["tests*"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[tool.cercis]
wrap-line-with-long-string = true

[tool.pydoclint]
style = 'numpy'
exclude = '\.git|.?venv|\.tox'
