[metadata]
name = PySeismoSoil
version = v0.4.10
description = A Python library for performing 1D seismic site response analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jsh9/PySeismoSoil
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    License :: OSI Approved :: BSD-3-Clause License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
python_requires = >=3.6
install_requires =
    numpy>=1.11.0
    matplotlib>=2.0.0
    scipy>=1.1.0
    numba>=0.38.0,<=0.55.2
include_package_data = True

[options.packages.find]
include =
    PySeismoSoil
    PySeismoSoil.*
exclude =
    tests*

[bdist_wheel]
universal = True
