[metadata]
name = PySeismoSoil
version = v0.5.2
description = A Python library for performing 1D seismic site response analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jsh9/PySeismoSoil
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
install_requires =
    matplotlib>=2.0.0
    numba>=0.38.0,<=0.55.2
    numpy>=1.11.0
    scipy>=1.1.0
python_requires = >=3.7
include_package_data = True

[options.packages.find]
exclude =
    tests*
include =
    PySeismoSoil
    PySeismoSoil.*

[bdist_wheel]
universal = True
